# revealing-plagiarism-nurtdinova

./: .gitignore  README.md  pyproject.toml
database/: __init__.py  db_utils.py
src/: __init__.py  main.py  plagiarism-detector.py  plagiarism.db  plagiarism_detector.py  report-maker.py  report_maker.py
src/assets/: synonyms.json
src/assets/corpus/: eco_1.txt  eco_2.txt  eco_3.txt  eco_4.txt  hist_1.txt  hist_2.txt  hist_3.txt  hist_4.txt  it_1.txt  it_2.txt  it_3.txt  it_4.txt  ling_1.txt  ling_2.txt  ling_3.txt  ling_4.txt  psy_1.txt  psy_2.txt  psy_3.txt  psy_4.txt
src/assets/corpus_plagiarised/: eco_1_pl.txt  eco_2_pl.txt  eco_3_pl.txt  eco_4_pl.txt  hist_1_pl.txt  hist_2_pl.txt  hist_3_pl.txt  hist_4_pl.txt  it_1_pl.txt  it_2_pl.txt  it_3_pl.txt  it_4_pl.txt  ling_1_pl.txt  ling_2_pl.txt  ling_3_pl.txt  ling_4_pl.txt  psy_1_pl.txt  psy_2_pl.txt  psy_3_pl.txt  psy_4_pl.txt
src/utils/: __init__.py  data_loader.py
tests/: test_plagiarism_revealer.py  test_text_improver.py  test_text_processor.py
