[project]
name = "revealing-plagiarism"
version = "0.1.0"
description = "A tool that detects plagiarism and rewrites text."
authors = [
    {name = "Sofia Nurtdinova", email = "asnurtdinova2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry.group.dev.dependencies]
pytest = ""
black = ""
doc8 = ""
sphinx = ""


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
